# project-agent

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  QUICK_START.md  README.md  REPO_STATUS.md  autocoder.py  config.yaml  deploy.sh  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  sync_repo_status.py
.github/workflows/: project_automation.yml
deploy/: project-agent.service
scripts/: start.sh
src/: __init__.py  main.py
src/agent/: core.py
src/api/: __init__.py  main.py
src/commands/: __init__.py  parser.py  telegram_bot.py
src/config/: settings.py
src/core/: __init__.py  config.py  database.py  logging_.py  monitoring.py  security.py
src/github/: __init__.py  client.py  types.py
src/llm/: __init__.py  client.py
src/openai/: __init__.py  client.py  types.py
src/report/: __init__.py  branch_manager.py  committer.py  generator.py  pr_content_generator.py  pr_creator.py  review_workflow.py
src/review/: __init__.py  analyzer.py  discovery.py  documentation.py  fetcher.py  orchestrator.py  structure.py  templates.py
src/tasks/: __init__.py  dispatcher.py  executor.py  interpreter.py  status.py
